# napari-omaas

./: .gitignore  .readthedocs.yml  LICENSE  README.md  setup.cfg  test_APD_ROI.py  test_FIR_filter.py  test_colormap.py  test_colormap2.py  test_reader_folder.py  tox.ini
.github/workflows/: publish-to-test-pypi.yml  test_and_deploy.yml
docs/: conf.py  index.md
docs/chapters/: getting_started.md
docs/experiments/: clossing_the_setup.md  example_acquisition.md  experiment.md
docs/scripts_examples/: .gitignore  APD_ROI_analysis_red_only.ipynb  analysis_dual_illumination.ipynb  analysis_red_only.ipynb  analysis_single_illumination.ipynb  scripts_examples.md
docs/source/: conf.py  index.rst
docs/tutorials/: APD_ROI_based.ipynb  APD_map_and_activation.ipynb  filter.ipynb  motion_compensation.ipynb  postprocessing_maps.ipynb  ratiometry.ipynb  segmentation.ipynb  tutorials.md  visualization.ipynb
src/: test.py
src/napari_omaas/: __init__.py  _reader.py  _sample_data.py  _widget.py  custom_exceptions.py  napari.yaml  utils.py  widgets.py
src/napari_omaas/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
