[metadata]
name = napari-omaas
version = 0.1.1
description = napari-OMAAS stands for Optical Mapping Acquisition and Analysis Software
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rjlopez2/napari-omaas
author = Ruben Lopez
author_email = rjlopez2@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/rjlopez2/napari-omaas/issues
    Documentation = https://github.com/rjlopez2/napari-omaas#README.md
    Source Code = https://github.com/rjlopez2/napari-omaas
    User Support = https://github.com/rjlopez2/napari-omaas/issues

[options]
packages = find:
install_requires =
    magicgui
    qtpy
    pyqtgraph
    # napari-sif-reader @ git+https://github.com/rjlopez2/napari-sif-reader.git
    # napari-time-series-plotter @ git+https://github.com/rjlopez2/napari-time_series_plotter.git@ # I cannot make this pluggin to install.
    # napari-mat-file-reader @ git+https://github.com/rjlopez2/napari-mat-file-reader.git

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-omaas = napari_omaas:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
