[metadata]
name = napari-omaas
version = 1.0.3
description = napari-OMAAS stands for Optical Mapping Acquisition and Analysis Software
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rjlopez2/napari-omaas
author = Ruben Lopez
author_email = rjlopez2@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/rjlopez2/napari-omaas/issues
    Documentation = https://github.com/rjlopez2/napari-omaas#README.md
    Source Code = https://github.com/rjlopez2/napari-omaas
    User Support = https://github.com/rjlopez2/napari-omaas/issues

[options]
packages = find:
install_requires =
    numpy
    tqdm
    superqt
    magicgui
    qtpy
    opencv-python-headless
    sif_parser
    # sif_parser @ git+https://github.com/rjlopez2/sif_parser@multithreading_np_spool_open
    napari_matplotlib
    napari-tiff
    napari-mat-file-reader #@ git+https://github.com/rjlopez2/napari-mat-file-reader.git
    opticalmapping
    scikit-image
    matplotlib
    # requests
    pandas
    scipy
    # ome-types
    tifffile
    toml
    # napari-aicsimageio

python_requires = >=3.10
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-omaas = napari_omaas:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5
docs = 
    sphinx
    sphinxcontrib-napoleon
    sphinxcontrib-bibtex
    sphinxcontrib-video
    sphinx-autobuild
    sphinx-copybutton
    sphinx-codeautolink
    furo
    myst_nb>=1.0.0
    jupytext
    jupyter-cache
gpu = 
    cupy-cuda11x


[options.package_data]
* = *.yaml
